--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "node": ">=8.4.0"
   },
   "scripts": {
-    "changelog": "git log --date=short --tags --format=\"[%cd] %h%d %s - %cn (%ce)\" > CHANGELOG",
+    "changelog": "auto-changelog -p",
     "test": "grunt test",
     "ssl": "mkdir ssl && openssl req -new -newkey rsa:2048 -subj \"/C=CA/ST=Ontario/L=Ottawa/O=CHANGEME/CN=localhost\" -days 365 -nodes -x509 -keyout ssl/localhost.key -out ssl/localhost.crt"
   },
@@ -52,6 +52,7 @@
     "yargs": "^14.2.0"
   },
   "devDependencies": {
+    "auto-changelog": "^1.16.2",
     "grunt": "^1.0.4",
     "grunt-cli": "^1.3.2",
     "grunt-eslint": "^22.0.0",
