--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tenso",
   "description": "Tensō is an HTTP/HTTP2 REST API framework",
   "version": "15.0.2",
-  "homepage": "http://avoidwork.github.io/tenso",
+  "homepage": "https://github.com/avoidwork/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
     "type": "git",
