Removing unneeded file, updating various build files, returning `passport` for convenient API

--- a/package.json
+++ b/package.json
@@ -31,6 +31,13 @@
     "lusca": "^1.6.1",
     "mime-db": "^1.45.0",
     "moment": "^2.29.1",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.5.0",
+    "passport-saml": "^2.0.2",
     "precise": "^1.1.0",
     "redis": "^3.0.2",
     "retsu": "^3.0.2",
