--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "node": ">=12.0.0"
   },
   "scripts": {
+    "benchmark": "node benchmark.js",
     "changelog": "auto-changelog -p",
+    "coverage": "nyc npm run test",
+    "sample": "node sample.js",
     "test": "eslint *.js lib/*.js test/*.js && mocha test/*.js --exit"
   },
   "dependencies": {
@@ -51,9 +54,12 @@
   },
   "devDependencies": {
     "auto-changelog": "^2.2.1",
+    "autocannon": "^7.0.1",
+    "concurrently": "^5.3.0",
     "eslint": "^7.17.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "tiny-httptest": "^1.1.1"
   },
   "keywords": [
