--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,6 @@ build/Release
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
-.sass-cache/*
-.idea/*
+www/assets/css/.sass-cache
+.idea
 .nyc_output
