--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tenso is an HTTP REST API framework",
-  "version": "16.2.4",
+  "version": "17.0.0",
   "homepage": "https://github.com/avoidwork/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -12,55 +12,69 @@
     "url": "https://github.com/avoidwork/tenso/issues"
   },
   "license": "BSD-3-Clause",
-  "main": "index",
   "engineStrict": true,
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=16.0.0"
   },
+  "main": "dist/tenso.cjs",
+  "module": "dist/tenso.esm.js",
+  "type": "module",
+  "sourceType": "module",
+  "types": "types/tenso.d.ts",
+  "files": [
+    "dist",
+    "types",
+    "www"
+  ],
   "scripts": {
     "benchmark": "node benchmark.js",
+    "build": "mkdir -p dist && rm -rf dist/* && npm run rollup",
     "changelog": "auto-changelog -p",
     "coverage": "nyc npm run test",
+    "lint": "eslint *.js src/*.js test/*.js",
+    "mocha": "mocha test/*.js",
+    "rollup": "rollup --config",
     "sample": "node sample.js",
-    "test": "eslint *.js lib/*.js test/*.js && mocha test/*.js --exit"
+    "test": "npm run lint && npm run mocha",
+    "types": "npx -p typescript tsc src/*.js --declaration --allowJs --emitDeclarationOnly --outDir types"
   },
   "dependencies": {
-    "connect-redis": "^6.0.0",
-    "cookie-parser": "^1.4.5",
-    "csv.js": "^2.0.1",
-    "express-session": "^1.17.2",
+    "@fast-csv/format": "^4.3.5",
+    "connect-redis": "^6.1.3",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
     "keysort": "^1.0.2",
     "lusca": "^1.7.0",
-    "mime-db": "^1.50.0",
-    "passport": "^0.5.0",
+    "mime-db": "^1.52.0",
+    "passport": "^0.6.0",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.6.1",
-    "passport-saml": "^3.2.0",
-    "precise": "^1.1.0",
-    "redis": "^3.1.2",
-    "retsu": "^3.0.2",
-    "tiny-coerce": "^1.1.1",
-    "tiny-etag": "^2.1.0",
+    "passport-saml": "^3.2.1",
+    "precise": "^2.0.0",
+    "redis": "^4.3.1",
+    "tiny-coerce": "^2.0.0",
+    "tiny-etag": "^3.0.1",
     "tiny-eventsource": "^1.2.1",
     "tiny-merge": "^1.0.0",
-    "tiny-uuid4": "^1.0.1",
-    "tiny-xml": "^2.0.1",
-    "woodland": "^16.1.3",
+    "xml": "^1.0.1",
+    "woodland": "^17.0.1",
     "yamljs": "^0.3.0",
-    "yargs": "^17.2.1"
+    "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
-    "auto-changelog": "^2.3.0",
-    "autocannon": "^7.4.0",
-    "concurrently": "^6.3.0",
-    "eslint": "^7.32.0",
+    "auto-changelog": "^2.4.0",
+    "autocannon": "^7.10.0",
+    "concurrently": "^7.4.0",
+    "eslint": "^8.24.0",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^9.1.2",
+    "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "tiny-httptest": "^2.0.0"
+    "rollup": "^2.79.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "tiny-httptest": "^3.0.0"
   },
   "keywords": [
     "rest",
