--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
     "amd": false
   },
   "parserOptions": {
-    "ecmaVersion": 2020
+    "ecmaVersion": 2020,
+    "sourceType": "module"
   },
   "globals": {
     "describe": true,
