--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "type": "module",
   "types": "types/tenso.d.ts",
   "files": [
+    "config.json",
     "dist",
     "types",
     "www"
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "@fast-csv/format": "^4.3.5",
+    "@node-saml/passport-saml": "^4.0.1",
     "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
@@ -51,7 +53,6 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.6.1",
-    "@node-saml/passport-saml": "^4.0.1",
     "precise": "^2.0.0",
     "redis": "^4.5.0",
     "tiny-coerce": "^2.0.0",
@@ -64,6 +65,8 @@
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-terser": "^0.1.0",
     "auto-changelog": "^2.4.0",
     "autocannon": "^7.10.0",
     "concurrently": "^7.5.0",
@@ -72,7 +75,6 @@
     "mocha": "^10.1.0",
     "nyc": "^15.1.0",
     "rollup": "^3.3.0",
-    "@rollup/plugin-terser": "^0.1.0",
     "tiny-httptest": "^3.0.3"
   },
   "keywords": [
