--- a/package.json
+++ b/package.json
@@ -12,24 +12,36 @@
     "url": "https://github.com/avoidwork/tenso/issues"
   },
   "license": "BSD-3-Clause",
-  "main": "index",
   "engineStrict": true,
   "engines": {
     "node": ">=17.0.0"
   },
   "scripts": {
     "benchmark": "node benchmark.js",
+    "build": "npm run lint && npm run rollup && npm run mocha",
     "changelog": "auto-changelog -p",
     "sample": "node sample.js",
     "lint": "eslint *.js lib/*.js test/*.js",
     "fix": "eslint --fix *.js lib/*.js test/*.js",
     "mocha": "nyc mocha test/*.test.js",
-    "test": "npm run lint && npm run mocha"
+    "rollup": "rollup --config",
+    "test": "npm run lint && npm run mocha",
+    "prepare": "husky install"
   },
+  "source": "src/tenso.js",
+  "main": "dist/tenso",
+  "exports": {
+    "types": "./types/tenso.d.ts",
+    "import": "./dist/tenso.js",
+    "require": "./dist/tenso.cjs"
+  },
+  "type": "module",
+  "types": "types/tenso.d.ts",
   "dependencies": {
     "@node-saml/passport-saml": "^4.0.4",
     "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
+    "defaults": "^2.0.2",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "keysort": "^2.0.1",
@@ -54,6 +66,7 @@
     "autocannon": "^7.12.0",
     "concurrently": "^8.2.1",
     "eslint": "^8.51.0",
+    "husky": "^8.0.3",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
