Building new outputs into `./dist`

--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "scripts": {
     "benchmark": "node benchmark.js",
-    "build": "npm run lint && npm run rollup && npm run mocha",
+    "build": "npm run lint && npm run rollup",
     "changelog": "auto-changelog -p",
     "sample": "node sample.js",
-    "lint": "eslint *.js lib/*.js test/*.js",
-    "fix": "eslint --fix *.js lib/*.js test/*.js",
+    "lint": "eslint *.js src/*.js test/*.js",
+    "fix": "eslint --fix *.js src/*.js test/*.js",
     "mocha": "nyc mocha test/*.test.js",
     "rollup": "rollup --config",
     "test": "npm run lint && npm run mocha",
@@ -54,9 +54,11 @@
     "passport-oauth2": "^1.7.0",
     "precise": "^4.0.2",
     "redis": "^4.6.10",
+    "rollup": "^3.29.2",
     "tiny-coerce": "^3.0.0",
     "tiny-etag": "^4.0.1",
     "tiny-eventsource": "^3.0.0",
+    "typescript": "^5.2.2",
     "woodland": "^18.0.11",
     "yamljs": "^0.3.0",
     "yargs-parser": "^21.1.1"
