--- a/.npmignore
+++ b/.npmignore
@@ -1,13 +1,9 @@
-/.github/
-/.idea/
-/.nyc_output/
-/benchmarks/
-/node_modules/
-/test/
-/www/sample/
-/www/assets/css/.sass-cache/
+.idea
+.husky
+.nyc_output
+src
+test
 .eslintrc
 .gitignore
-.travis.yml
+rollup.config.js
 benchmark.js
-sample.js
