Updating dependencies & setting extension on `main` value in `package.json`

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prepare": "husky install"
   },
   "source": "src/tenso.js",
-  "main": "dist/tenso",
+  "main": "dist/tenso.cjs",
   "exports": {
     "types": "./types/tenso.d.ts",
     "import": "./dist/tenso.js",
@@ -41,32 +41,32 @@
     "@node-saml/passport-saml": "^4.0.4",
     "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
-    "defaults": "^2.0.2",
+    "defaults": "^3.0.0",
     "express-session": "^1.17.3",
-    "helmet": "^7.0.0",
+    "helmet": "^7.1.0",
     "keysort": "^3.0.1",
     "mime-db": "^1.52.0",
     "precise": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
-    "redis": "^4.6.10",
-    "rollup": "^3.29.2",
-    "tiny-coerce": "^3.0.1",
-    "tiny-etag": "^4.0.2",
-    "tiny-eventsource": "^3.0.1",
-    "typescript": "^5.2.2",
-    "woodland": "^18.1.2",
+    "redis": "^4.6.12",
+    "rollup": "^4.9.1",
+    "tiny-coerce": "^3.0.2",
+    "tiny-etag": "^4.0.5",
+    "tiny-eventsource": "^3.0.8",
+    "woodland": "^18.2.4",
     "yamljs": "^0.3.0",
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "auto-changelog": "^2.4.0",
-    "autocannon": "^7.12.0",
-    "concurrently": "^8.2.1",
-    "eslint": "^8.51.0",
+    "autocannon": "^7.14.0",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.56.0",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "tiny-httptest": "^4.0.7"
+    "tiny-httptest": "^4.0.9",
+    "typescript": "^5.3.3"
   },
   "keywords": [
     "rest",
