--- a/package.json
+++ b/package.json
@@ -38,35 +38,35 @@
   "type": "module",
   "types": "types/tenso.d.ts",
   "dependencies": {
-    "@node-saml/passport-saml": "^4.0.4",
-    "connect-redis": "^7.1.0",
+    "@node-saml/passport-saml": "^5.0.0",
+    "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "defaults": "^3.0.0",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "keysort": "^3.0.1",
-    "mime-db": "^1.52.0",
+    "mime-db": "^1.53.0",
     "precise": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
-    "redis": "^4.6.12",
-    "rollup": "^4.9.1",
+    "ioredis": "^5.4.1",
     "tiny-coerce": "^3.0.2",
     "tiny-etag": "^4.0.5",
     "tiny-eventsource": "^3.0.8",
-    "woodland": "^18.2.4",
+    "woodland": "^18.2.5",
     "yamljs": "^0.3.0",
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "auto-changelog": "^2.4.0",
-    "autocannon": "^7.14.0",
+    "autocannon": "^7.15.0",
     "concurrently": "^8.2.2",
-    "eslint": "^8.56.0",
-    "husky": "^8.0.3",
-    "mocha": "^10.2.0",
-    "nyc": "^15.1.0",
-    "tiny-httptest": "^4.0.9",
-    "typescript": "^5.3.3"
+    "eslint": "^9.7.0",
+    "husky": "^9.0.11",
+    "mocha": "^10.6.0",
+    "nyc": "^17.0.0",
+    "rollup": "^4.18.1",
+    "tiny-httptest": "^4.0.11",
+    "typescript": "^5.5.3"
   },
   "keywords": [
     "rest",
