Updating the csv renderer

--- a/package.json
+++ b/package.json
@@ -47,14 +47,15 @@
     "@node-saml/passport-saml": "^5.0.0",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
+    "csv-stringify": "^6.5.0",
     "defaults": "^3.0.0",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
+    "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "keysort": "^3.0.1",
     "mime-db": "^1.53.0",
     "precise": "^4.0.3",
-    "jsonwebtoken": "^9.0.2",
-    "ioredis": "^5.4.1",
     "tiny-coerce": "^3.0.2",
     "tiny-etag": "^4.0.5",
     "tiny-eventsource": "^3.0.8",
