--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "csv-stringify": "^6.5.0",
     "defaults": "^3.0.0",
     "express-session": "^1.18.0",
+    "fast-xml-parser": "^4.4.0",
     "helmet": "^7.1.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
