--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "tiny-coerce": "^3.0.2",
     "tiny-etag": "^4.0.5",
     "tiny-eventsource": "^3.0.8",
+    "tiny-jsonl": "^1.0.10",
     "woodland": "^18.2.5",
     "yamljs": "^0.3.0",
     "yargs-parser": "^21.1.1"
