Wiring up render path (WIP)

--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
     "defaults": "^3.0.0",
     "express-session": "^1.18.0",
     "fast-xml-parser": "^4.4.1",
-    "helmet": "^7.1.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "keysort": "^3.0.1",
+    "lusca": "^1.7.0",
     "mime-db": "^1.53.0",
     "passport": "^0.7.0",
     "passport-http": "^0.3.0",
@@ -67,7 +67,7 @@
     "tiny-etag": "^4.0.5",
     "tiny-eventsource": "^3.0.8",
     "tiny-jsonl": "^2.0.1",
-    "woodland": "^19.0.1",
+    "woodland": "^19.0.2",
     "yamljs": "^0.3.0",
     "yargs-parser": "^21.1.1"
   },
