--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "csv-stringify": "^6.5.1",
-    "defaults": "^3.0.0",
     "express-session": "^1.18.0",
     "fast-xml-parser": "^4.4.1",
     "ioredis": "^5.4.1",
@@ -68,6 +67,7 @@
     "tiny-etag": "^4.0.5",
     "tiny-eventsource": "^3.0.8",
     "tiny-jsonl": "^2.0.1",
+    "tiny-merge": "^2.0.0",
     "woodland": "^19.0.2",
     "yamljs": "^0.3.0",
     "yargs-parser": "^21.1.1"
@@ -76,13 +76,13 @@
     "auto-changelog": "^2.4.0",
     "autocannon": "^7.15.0",
     "concurrently": "^8.2.2",
+    "csv-parse": "^5.5.6",
     "eslint": "^9.9.1",
     "husky": "^9.1.5",
     "mocha": "^10.7.3",
     "nyc": "^17.0.0",
     "rollup": "^4.21.1",
     "tiny-httptest": "^4.0.11",
-    "tiny-uuid4": "^1.0.1",
     "typescript": "^5.5.4"
   },
   "keywords": [
