--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "csv-stringify": "^6.5.1",
+    "express-prom-bundle": "^7.0.0",
     "express-session": "^1.18.0",
     "fast-xml-parser": "^4.4.1",
     "ioredis": "^5.4.1",
