--- a/package.json
+++ b/package.json
@@ -46,17 +46,17 @@
     "www/assets"
   ],
   "dependencies": {
-    "connect-redis": "^7.1.1",
-    "cookie-parser": "^1.4.6",
-    "csv-stringify": "^6.5.1",
+    "connect-redis": "^9.0.0",
+    "cookie-parser": "^1.4.7",
+    "csv-stringify": "^6.5.2",
     "express-prom-bundle": "^8.0.0",
-    "express-session": "^1.18.0",
-    "fast-xml-parser": "^5.0.6",
-    "ioredis": "^5.4.1",
+    "express-session": "^1.18.1",
+    "fast-xml-parser": "^5.2.5",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "keysort": "^3.0.1",
     "lusca": "^1.7.0",
-    "mime-db": "^1.53.0",
+    "mime-db": "^1.54.0",
     "passport": "^0.7.0",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
@@ -66,24 +66,20 @@
     "tiny-coerce": "^3.0.2",
     "tiny-etag": "^4.0.5",
     "tiny-eventsource": "^3.0.8",
-    "tiny-jsonl": "^3.0.2",
+    "tiny-jsonl": "^3.0.4",
     "tiny-merge": "^2.0.0",
-    "woodland": "^20.1.2",
+    "woodland": "^20.1.7",
     "yamljs": "^0.3.0",
     "yargs-parser": "^22.0.0"
   },
   "devDependencies": {
     "auto-changelog": "^2.5.0",
-    "autocannon": "^8.0.0",
-    "concurrently": "^9.0.1",
-    "csv-parse": "^5.5.6",
-    "eslint": "^9.12.0",
-    "husky": "^9.1.6",
-    "mocha": "^11.0.1",
-    "nyc": "^17.1.0",
-    "rollup": "^4.24.0",
-    "tiny-httptest": "^4.0.13",
-    "typescript": "^5.6.2"
+    "csv-parse": "^5.6.0",
+    "eslint": "^9.30.1",
+    "husky": "^9.1.7",
+    "mocha": "^11.7.1",
+    "rollup": "^4.44.2",
+    "tiny-httptest": "^4.0.13"
   },
   "keywords": [
     "rest",
