--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "sample": "node sample.js",
     "lint": "eslint *.js src/**/*.js test/*.js",
     "fix": "eslint --fix *.js src/**/*.js test/*.js",
-    "mocha": "nyc mocha test/*.test.js",
+    "mocha": "mocha test/*.test.js",
     "rollup": "rollup --config",
     "test": "npm run lint && npm run mocha",
     "prepare": "husky",
