Removing 'types' npm script

--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "mocha": "mocha test/*.test.js",
     "rollup": "rollup --config",
     "test": "npm run lint && npm run mocha",
-    "prepare": "husky",
-    "types": "npx -p typescript tsc src/tenso.js --declaration --allowJs --emitDeclarationOnly --outDir types"
+    "prepare": "husky"
   },
   "source": "src/tenso.js",
   "main": "dist/tenso.cjs",
