--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "build": "npm run lint && npm run rollup",
     "changelog": "auto-changelog -p",
     "sample": "node sample.js",
-    "lint": "eslint *.js src/**/*.js test/*.js",
-    "fix": "eslint --fix *.js src/**/*.js test/*.js",
+    "lint": "eslint *.js src/**/*.js",
+    "fix": "eslint --fix *.js src/**/*.js",
     "mocha": "mocha test/*.test.js",
     "rollup": "rollup --config",
     "test": "npm run lint && npm run mocha",
