--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "build": "npm run lint && npm run rollup",
     "changelog": "auto-changelog -p",
     "sample": "node sample.js",
-    "lint": "eslint *.js src/**/*.js",
-    "fix": "eslint --fix *.js src/**/*.js",
-    "mocha": "mocha test/*.test.js",
+    "lint": "eslint *.js src/**/*.js tests/**/*.js",
+    "fix": "eslint --fix *.js src/**/*.js tests/**/*.js",
+    "mocha": "mocha tests/**/*.js",
     "rollup": "rollup --config",
     "test": "npm run lint && npm run mocha",
     "prepare": "husky"
