--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.8.0",
     "precise": "^4.0.3",
+    "prom-client": "^15.1.3",
     "tiny-coerce": "^3.0.2",
     "tiny-etag": "^4.0.5",
     "tiny-eventsource": "^3.0.8",
