--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
   "dependencies": {
     "connect-redis": "^9.0.0",
     "cookie-parser": "^1.4.7",
+    "csrf-csrf": "^4.0.3",
     "csv-stringify": "^6.5.2",
     "express-session": "^1.18.1",
     "fast-xml-parser": "^5.2.5",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "keysort": "^3.0.1",
-    "lusca": "^1.7.0",
+    "helmet": "^8.0.0",
     "mime-db": "^1.54.0",
     "passport": "^0.7.0",
     "passport-http": "^0.3.0",
