--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenso",
   "description": "Tenso is an HTTP REST API framework",
-  "version": "17.2.5",
+  "version": "17.3.0",
   "homepage": "https://github.com/avoidwork/tenso",
   "author": "Jason Mulligan <jason.mulligan@avoidwork.com>",
   "repository": {
@@ -20,12 +20,22 @@
     "build": "npm run lint && npm run rollup",
     "changelog": "auto-changelog -p",
     "sample": "node sample.js",
-    "lint": "eslint *.js src/**/*.js tests/**/*.js",
-    "fix": "eslint --fix *.js src/**/*.js tests/**/*.js",
+    "lint": "eslint *.js src/**/*.js tests/**/*.js benchmarks/**/*.js",
+    "fix": "eslint --fix *.js src/**/*.js tests/**/*.js benchmarks/**/*.js",
     "mocha": "mocha tests/**/*.js",
     "rollup": "rollup --config",
     "test": "npm run lint && npm run mocha",
-    "prepare": "husky"
+    "prepare": "husky",
+    "benchmark": "node benchmark.js",
+    "benchmark:basic": "node benchmarks/basic-http.js",
+    "benchmark:parsers": "node benchmarks/parsers.js",
+    "benchmark:renderers": "node benchmarks/renderers.js",
+    "benchmark:serializers": "node benchmarks/serializers.js",
+    "benchmark:auth": "node benchmarks/auth.js",
+    "benchmark:rate": "node benchmarks/rate-limiting.js",
+    "benchmark:hypermedia": "node benchmarks/hypermedia.js",
+    "benchmark:memory": "node benchmarks/memory.js",
+    "benchmark:load-test": "node benchmarks/load-test.js"
   },
   "source": "src/tenso.js",
   "main": "dist/tenso.cjs",
@@ -73,8 +83,11 @@
   },
   "devDependencies": {
     "auto-changelog": "^2.5.0",
+    "autocannon": "^7.15.0",
+    "benchmark": "^2.1.4",
     "csv-parse": "^6.0.0",
     "eslint": "^9.30.1",
+    "filesize": "^11.0.2",
     "husky": "^9.1.7",
     "mocha": "^11.7.1",
     "rollup": "^4.44.2",
