--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "fix": "eslint --fix *.js src/**/*.js tests/**/*.js benchmarks/**/*.js",
     "mocha": "mocha --require tests/setup.js tests/**/*.js",
     "rollup": "rollup --config",
-    "test": "npm run lint && npm run mocha",
+    "test": "npm run lint && c8 npm run mocha",
     "prepare": "husky",
     "benchmark:basic": "node benchmarks/basic-http.js",
     "benchmark:parsers": "node benchmarks/parsers.js",
@@ -85,6 +85,7 @@
     "auto-changelog": "^2.5.0",
     "autocannon": "^8.0.0",
     "benchmark": "^2.1.4",
+    "c8": "^10.1.3",
     "csv-parse": "^6.0.0",
     "eslint": "^9.30.1",
     "filesize": "^11.0.2",
